--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Hexo
+title: veli
 subtitle: Test
 description: Kamil
 keywords: R
@@ -52,7 +52,7 @@ default_layout: post
 titlecase: false # Transform title into titlecase
 external_link: true # Open external links in new tab
 filename_case: 0
-render_drafts: false
+render_drafts: true
 post_asset_folder: false
 relative_link: false
 future: true
@@ -105,4 +105,5 @@ excerpt:
   depth: 10
   excerpt_excludes: []
   more_excludes: []
+  hideWholePostExcerpts: true
   
