--- a/source/_data/_config_tr.yml
+++ b/source/_data/_config_tr.yml
@@ -96,7 +96,8 @@ deploy:
   type:
 
 excerpt:
-  depth: 2
+  depth: 10
   excerpt_excludes: []
   more_excludes: []
+  hideWholePostExcerpts: true
   
