--- a/themes/spfk/_config.yml
+++ b/themes/spfk/_config.yml
@@ -52,8 +52,8 @@ subnav:
 # 选一个作为网站评论系统，其他保持禁用。
 
 disqus:
-  # on: true
-  shortname: luuman
+  on: true
+  shortname: velicankupeli
   # https://help.disqus.com/customer/en/portal/articles/466208-what-s-a-shortname-
   # It is unnecessary to enable disqus here if
   # you have set "disqus_shortname" in your site's "_config.yml"
